--- a/firebase.json
+++ b/firebase.json
@@ -1,4 +1,12 @@
 {
+  "functions": {
+    "ignore": [
+      "node_modules",
+      ".git",
+      "firebase-debug.log",
+      "firebase-debug.*.log"
+    ]
+  },
   "hosting": {
     "public": "build",
     "ignore": [
