--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "child-process-promise": "^2.2.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0"
   },
